--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 authors = ["David Smoker"]
 description = "Converts infix (human-readable) expression tokens into postfix (Reverse Polish Notation) order"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/dsmo7206/fixit"
 
 [dependencies]
